crates/rome_formatter/tests/specs/prettier/js/decorators/classes.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: classes.js

---
# Input
```js
@deco class Foo {}

@deco export class Bar {}

@deco export default class Baz {}

const foo = @deco class {
  //
};

const bar =
  @deco
  class {
    //
  };

```

# Output
```js
@deco class Foo {}

@deco export class Bar {}

@deco export default class Baz {}

const foo =
@deco class {
  //
}

const bar =
@deco
  class {
    //
  }

```

# Errors
```
error[SyntaxError]: decorator are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ classes.js:1:1
  │
1 │ @deco class Foo {}
  │ ^^^^^ TypeScript only syntax

error[SyntaxError]: decorator are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ classes.js:3:1
  │
3 │ @deco export class Bar {}
  │ ^^^^^ TypeScript only syntax

error[SyntaxError]: decorator are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ classes.js:5:1
  │
5 │ @deco export default class Baz {}
  │ ^^^^^ TypeScript only syntax

error[SyntaxError]: expected an expression, or an assignment but instead found '@'
  ┌─ classes.js:7:13
  │
7 │ const foo = @deco class {
  │             ^ Expected an expression, or an assignment here

error[SyntaxError]: class declarations must have a name
  ┌─ classes.js:7:19
  │
7 │ const foo = @deco class {
  │                   ^^^^^^

error[SyntaxError]: expected an expression, or an assignment but instead found '@'
   ┌─ classes.js:12:3
   │
12 │   @deco
   │   ^ Expected an expression, or an assignment here

error[SyntaxError]: class declarations must have a name
   ┌─ classes.js:13:3
   │
13 │   class {
   │   ^^^^^^


```


